<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior ="single">

        <item
            android:id="@+id/nav_Lista_jogo"
            android:icon="@drawable/ic_menu_estatico"
            android:title="@string/menuEstatico" />
        <item
            android:id="@+id/nav_upload_imagem"
            android:icon="@drawable/ic_menu_dinamico"
            android:title="@string/menuDinamico" />
    </group>

    <item android:title="Comunicar" >
        <menu >
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/stringEmail" />
        </menu>
    </item>

</menu>